; ModuleID = '/home/carl/AnghaBench/openssl/engines/extr_e_dasync.c_engine_load_dasync_int.c'
source_filename = "/home/carl/AnghaBench/openssl/engines/extr_e_dasync.c_engine_load_dasync_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @engine_load_dasync_int() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* (...) @engine_dasync()
  store i32* %2, i32** %1, align 8
  %3 = load i32*, i32** %1, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  br label %12

6:                                                ; preds = %0
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @ENGINE_add(i32* %7)
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @ENGINE_free(i32* %9)
  %11 = call i32 (...) @ERR_clear_error()
  br label %12

12:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32* @engine_dasync(...) #1

declare dso_local i32 @ENGINE_add(i32*) #1

declare dso_local i32 @ENGINE_free(i32*) #1

declare dso_local i32 @ERR_clear_error(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
